--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </dov>
             </div>
             <div class="secondHalf">
-                <img src="image/laptop7.jpg" alt="">
+                <img src="laptop7.jpg" alt="">
             </div>
         </div>
     </section>
@@ -48,7 +48,7 @@
             <p class="sectionTag text-big">Lets Grow Together</p>
             <p class="sectionSubTag text-small">Education is the transmission of knowledge, skills, and character traits and manifests in various forms. Formal education occurs within a structured institutional framework, such as public schools, following a curriculum. Non-formal education also follows a structured approach but occurs outside the formal schooling system, while informal education entails unstructured learning through daily experiences. Formal and non-formal education are categorized into levels, including early childhood education, primary education, secondary education, and tertiary education. Other classifications focus on teaching methods, such as teacher-centered and student-centered education.</p></div>
             <div class="thumbnail">
-                <img src="image/laptop9.jpg" alt="" class="imgFluid">
+                <img src="laptop9.jpg" alt="" class="imgFluid">
         </div>
     </section>
     <section class="section section-left" id="about">
@@ -56,7 +56,7 @@
             <p class="sectionTag text-big">Lets Grow Together</p>
             <p class="sectionSubTag text-small">Education is the transmission of knowledge, skills, and character traits and manifests in various forms. Formal education occurs within a structured institutional framework, such as public schools, following a curriculum. Non-formal education also follows a structured approach but occurs outside the formal schooling system, while informal education entails unstructured learning through daily experiences. Formal and non-formal education are categorized into levels, including early childhood education, primary education, secondary education, and tertiary education. Other classifications focus on teaching methods, such as teacher-centered and student-centered education.</p></div>
         <div class="thumbnail">
-            <img src="image/laptop02.jpeg" alt="" class="imgFluid">
+            <img src="laptop02.jpeg" alt="" class="imgFluid">
         </div>
     </section>
     <section class="section">
@@ -64,7 +64,7 @@
             <p class="sectionTag text-big">Lets Grow Together</p>
         <p class="sectionSubTag text-small">Education is the transmission of knowledge, skills, and character traits and manifests in various forms. Formal education occurs within a structured institutional framework, such as public schools, following a curriculum. Non-formal education also follows a structured approach but occurs outside the formal schooling system, while informal education entails unstructured learning through daily experiences. Formal and non-formal education are categorized into levels, including early childhood education, primary education, secondary education, and tertiary education. Other classifications focus on teaching methods, such as teacher-centered and student-centered education..</p></div>
         <div class="thumbnail">
-            <img src="image/laptop05.jpeg" alt="" class="imgFluid">
+            <img src="laptop05.jpeg" alt="" class="imgFluid">
         </div>
     </section>
     <hr>
